app/react/App/scss/layout/_content.scss
.content {
	height: 100%;
	display: flex;
	flex-direction: column;
}

.content-header {
  position: relative;
  line-height: 1.8em;
  background: $c-white;
  border-bottom: 1px solid $c-grey-light;
  
  @media(min-width: 1024px) {
    display: -webkit-flex;
    display: flex;
    min-height: $header-height;
    line-height: $header-height;
  }
  
}
.content-header-title {
  display: -webkit-flex;
  display: flex;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  align-items: center;
  padding: 15px;
  height: $header-height;
  @media(min-width: 1024px) {
    padding: 0 15px;
    width: calc(100% - 400px);
  }
  h1 {
    margin: 0;
    font-size: $f-size;
    @media(min-width: 1024px) {
      display: inline-block;
      line-height: $header-height;
      white-space: nowrap !important;
      overflow: hidden;
      text-overflow: ellipsis;
    }
  }
  .btn-color {
    margin-left: 5px;
    font-size: $f-size-sm;
  }
}

.content-header-entity,
.content-header-document {
  .content-header-title {
    -webkit-justify-content: flex-start;
    justify-content: flex-start;
  }
}
.content-header-tabs {
  @media(min-width: 1024px) {
    width: 400px;
  }
}
.content-header-document {
  z-index: 4;
}
.content-header-entity {
  z-index: 5;
  @media(min-width: 1024px) {
    z-index: 7;
  }
}

@media(min-width: 1024px) {
  .main-wrapper {
    position: relative;
    min-height: 100%;
    padding-bottom: 100px;
  }
}

